# flask-graylog2

./: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  dev-requirements.txt  flask_graylog.py  pyproject.toml
example/: app.py
